--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
         }
         .greenroundbck img {
             height: 20px;
-            /* Hapus properti yang tidak perlu; flexbox dari parent akan menangani centering */
-            /* Jika perlu penyesuaian khusus, gunakan margin atau flex-shrink */
-            flex-shrink: 0; /* Mencegah gambar menyusut */
+            flex-shrink: 0; 
         }
         .greyroundbck {
             scale: 0.8;
@@ -300,6 +298,71 @@
             text-decoration: underline;
         }
 
+        .slider {
+            position: relative;
+            width: 100%;
+            max-width: 600px;
+            overflow: hidden;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        .slides {
+            display: flex;
+            transition: transform 0.5s ease;
+        }
+        .slide {
+            min-width: 100%;
+            box-sizing: border-box;
+        }
+        .slide img {
+            width: 100%;
+            height: auto;
+            border-radius: 15px;
+        }
+        .buttons {
+            text-align: center;
+            margin-top: 10px;
+        }
+        .buttons button {
+            padding: 10px 20px;
+            margin: 0 5px;
+            cursor: pointer;
+            background: rgba(255, 255, 255, 0.25);
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+        .buttons button:hover {
+            background: rgba(255, 255, 255, 0.35);
+        }
+        .thumbnails {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .thumbnail {
+            width: 80px;
+            height: 60px;
+            margin: 0 5px;
+            cursor: pointer;
+            border: 2px solid transparent;
+            border-radius: 10px;
+            transition: border-color 0.3s;
+            overflow: hidden;
+        }
+        .thumbnail.active {
+            border-color: #007bff;
+        }
+        .thumbnail img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
         @media (max-width: 768px) {
             header {
                 width: 95%;
@@ -350,6 +413,13 @@
             .intro-text {
                 font-size: 20px;
             }
+            .slider {
+                max-width: 95%;
+            }
+            .thumbnail {
+                width: 60px;
+                height: 45px;
+            }
         }
 
         @media (min-width: 769px) {
@@ -373,8 +443,26 @@
             <h1>Double Coupler Studio</h1>
         </div>
     </header>
-    <div class="linktree-container">
-        <img src="dcslogo.png" class="logo1" alt="Logo">
+
+    <h2>Struktur Pengurus DCS</h2>
+    <div class="slider">
+            <div class="slides" id="slides">
+                <div class="slide">
+                    <img src="owner.png" alt="Gambar 1">
+                </div>
+                <div class="slide">
+                    <img src="sekripter.png" alt="Gambar 2">
+                </div>
+                <div class="slide">
+                    <img src="developer.png" alt="Gambar 3">
+                </div>
+                <div class="slide">
+                    <img src="staff.png" alt="Gambar 4">
+                </div>
+            </div>
+        </div>
+    <div class="linktree-container"> 
+        
         <h2>LinkTrees</h2>
         <button class="dropdown-btn" onclick="togglehiddenlinktree('social-links')">  
             <img src="social.png" alt="Social Media"> Social Media Links
@@ -387,7 +475,7 @@
                 <img src="tktok.png" alt="Tiktok"> Tiktok
             </a>
             <a href="" class="link-item" target="_blank">
-                <img src="youtube.png" alt="YouTube"> YouTube
+                                <img src="youtube.png" alt="YouTube"> YouTube
             </a>
             <a href="https://chat.whatsapp.com/JhaDm5HrpcQGkekDbIFyN9" class="link-item" target="_blank">
                 <img src="wa.png" alt="Whatsapp"> Whatsapp Group
@@ -496,7 +584,10 @@
                 translateY: 0,
                 duration: 1000,
                 delay: 500,
-                easing: 'easeOutExpo'
+                easing: 'easeOutExpo',
+                complete: function() {
+                    setinterval();
+                }
             });
 
             setTimeout(() => {
@@ -568,11 +659,51 @@
                             delay: 1800,
                             easing: 'easeOutExpo'
                         });
+                        anime({
+                            targets: '.slider',
+                            opacity: 1,
+                            translateY: 0,
+                            duration: 1000,
+                            delay: 600,
+                            easing: 'easeOutExpo',
+                        });
                         }
                     });
                 }, 2500);
             });
     </script>
+    <script>
+        let currentIndex = 0;
+        const slides = document.getElementById('slides');
+        const thumbnails = document.querySelectorAll('.thumbnail');
+        const totalSlides = slides.children.length;
+
+        function showSlide(index) {
+            slides.style.transform = `translateX(-${index * 100}%)`;
+            // Update active thumbnail
+            thumbnails.forEach((thumb, i) => {
+                thumb.classList.toggle('active', i === index);
+            });
+        }
+
+        function nextSlide() {
+            currentIndex = (currentIndex + 1) % totalSlides;
+            showSlide(currentIndex);
+        }
+
+        function prevSlide() {
+            currentIndex = (currentIndex - 1 + totalSlides) % totalSlides;
+            showSlide(currentIndex);
+        }
+
+        function goToSlide(index) {
+            currentIndex = index;
+            showSlide(currentIndex);
+        }
+
+        function setinterval() {
+            setInterval(nextSlide, 4000);
+        }
+    </script>
 </body>
 </html>
-
