Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -551,6 +551,12 @@
                 </div>
             </a>
         </div>
+        <div style="margin-top: 40px; font-size: 16px; font-weight: 500;">
+            <h1>"</h1><h4>tak ada hal yang istimewa <br>
+            selain dia yang ku cinta <br>
+            tak ada hal yang lebih berharga <br>
+            selain dirinya yang setia</h4><h1>"</h1>    
+        </div>
     </div>
     <a href="https://api.whatsapp.com/send/?phone=6285945793232&text&type=phone_number&app_absent=0" class="customer-care" target="_blank">
         <img src="wa.png" alt="Whatsapp"> Customer Care
@@ -715,3 +721,4 @@
     </script>
 </body>
 </html>
+
