--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="j6Ken3YmNcbttr7dJHxrECkvWXdGchQnlO8PAaVoQ3k" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="dcslogo.png" type="image/x-icon">
@@ -721,4 +722,5 @@
     </script>
 </body>
 </html>
+
 
